# Factorio-Mod-Manager

./: pyproject.toml
fmm/: __main__.py
